--- a/LocalWorkShop/Sync-OCIImage/VyOS.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/VyOS.jsonc
@@ -22,9 +22,9 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "powerdns/pdns-auth-50:5.0.0",
-        "archive": "docker.io_powerdns_pdns-auth-50_5.0.0.tar",
-        "privateRepo": "powerdns/pdns-auth-50:5.0.0",
+        "publicRepo": "powerdns/pdns-auth-50:5.0.1",
+        "archive": "docker.io_powerdns_pdns-auth-50_5.0.1.tar",
+        "privateRepo": "powerdns/pdns-auth-50:5.0.1",
         "description": "https://hub.docker.com/r/powerdns/pdns-auth-50",
     },
     {
@@ -99,9 +99,9 @@
     },
     {
         "publicRegistry": "docker.io", // "quay.io",
-        "publicRepo": "coredns/coredns:1.12.4", // "giantswarm/coredns:1.12.4",
-        "archive": "quay.io_giantswarm_coredns_1.12.4.tar",
-        "privateRepo": "coredns/coredns:1.12.4",
+        "publicRepo": "coredns/coredns:1.13.1", // "giantswarm/coredns:1.13.1",
+        "archive": "docker.io_coredns_coredns_1.13.1.tar",
+        "privateRepo": "coredns/coredns:1.13.1",
         "description": "https://hub.docker.com/r/coredns/coredns/tags, https://quay.io/repository/giantswarm/coredns?tab=tags",
     },
     {
@@ -120,9 +120,9 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "library/traefik:v3.5.3",
-        "archive": "docker.io_library_traefik_v3.5.3.tar",
-        "privateRepo": "library/traefik:v3.5.3",
+        "publicRepo": "library/traefik:v3.5.4",
+        "archive": "docker.io_library_traefik_v3.5.4.tar",
+        "privateRepo": "library/traefik:v3.5.4",
         "description": "https://hub.docker.com/r/library/traefik/tags",
     },
     {
