--- a/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
@@ -1,13 +1,31 @@
 global:
   imageRegistry: zot.day0.sololab
 traefik:
-  containerPorts: []
+  podLabels:
+    # traefik.enable: true
+    # traefik.http.routers.dashboard-redirect.entrypoints: web
+    # traefik.http.routers.dashboard-redirect.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+    # traefik.http.routers.dashboard-redirect.middlewares: toHttps@file
+    # traefik.http.routers.dashboard-redirect.service: api@internal
+
+    # traefik.http.routers.dashboard.entryPoints: webSecure
+    # traefik.http.routers.dashboard.tls: true
+    # traefik.http.routers.dashboard.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+    # traefik.http.routers.dashboard.service: api@internal
+    # traefik.http.routers.dashboard.middlewares: userPass@file
+    # # https://community.traefik.io/t/api-not-accessible-when-traefik-in-host-network-mode/13321/2
+    # traefik.http.services.dashboard.loadbalancer.server.port: 443
+
+    # traefik.http.routers.metrics.entryPoints: webSecure
+    # traefik.http.routers.metrics.tls: true
+    # traefik.http.routers.metrics.rule: "Host(`traefik.day1.sololab`) && PathPrefix(`/metrics`)"
+    # traefik.http.routers.metrics.service: prometheus@internal
   containerSecurityContext:
     enabled: true
     seLinuxOptions:
       type: spc_t
   configFiles:
-    static:
+    install:
       providers:
         consulCatalog:
           # constraints: "Tag(`host=day1`)"
@@ -65,7 +83,7 @@ traefik:
         prometheus:
           manualRouting: true
       accessLog: {}
-    dynamic:
+    routing:
       # https://traefik.io/blog/traefik-2-tls-101-23b4fbee81f1/
       tlsCerts.yaml:
         tls:
@@ -87,28 +105,10 @@ traefik:
               rootcas:
                 - "/etc/traefik/tls/ca.crt"
 
-  podLabels:
-    # traefik.enable: true
-    # traefik.http.routers.dashboard-redirect.entrypoints: web
-    # traefik.http.routers.dashboard-redirect.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
-    # traefik.http.routers.dashboard-redirect.middlewares: toHttps@file
-    # traefik.http.routers.dashboard-redirect.service: api@internal
-
-    # traefik.http.routers.dashboard.entryPoints: webSecure
-    # traefik.http.routers.dashboard.tls: true
-    # traefik.http.routers.dashboard.rule: "Host(`traefik.day1.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
-    # traefik.http.routers.dashboard.service: api@internal
-    # traefik.http.routers.dashboard.middlewares: userPass@file
-    # # https://community.traefik.io/t/api-not-accessible-when-traefik-in-host-network-mode/13321/2
-    # traefik.http.services.dashboard.loadbalancer.server.port: 443
-
-    # traefik.http.routers.metrics.entryPoints: webSecure
-    # traefik.http.routers.metrics.tls: true
-    # traefik.http.routers.metrics.rule: "Host(`traefik.day1.sololab`) && PathPrefix(`/metrics`)"
-    # traefik.http.routers.metrics.service: prometheus@internal
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
+    # https://github.com/traefik/traefik/blob/v3.5.4/docs/content/https/acme.md#cacertificates
     - name: LEGO_CA_CERTIFICATES
       value: /etc/traefik/tls/ca.crt
     - name: LEGO_CA_SYSTEM_CERT_POOL
@@ -117,14 +117,14 @@ traefik:
     - name: docker-socket
       mountPath: /var/run/docker.sock
       readOnly: true
-    - name: config-dynamic
-      mountPath: /etc/traefik/dynamic
+    - name: config-routing
+      mountPath: /etc/traefik/routing
   extraVolumes:
     - name: docker-socket
       hostPath:
         path: /run/user/1001/podman/podman.sock
         type: Socket
-    - name: config-dynamic
+    - name: config-routing
       hostPath:
         path: /var/home/podmgr/traefik-file-provider
 persistence:
