quadlet-deploy: separate plain text value and secret value, upgrade image version

--- a/TerraformWorkShop/Quadlet/exporters-day0/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/exporters-day0/attachments/values-sololab.yaml
@@ -1,22 +1,22 @@
 global:
-  imageRegistry: zot.day0.sololab
+  imageRegistry: zot.vyos.sololab
 exporter:
+  podLabels:
+    traefik.enable: true
+    traefik.http.routers.prometheus-podman-exporter-redirect.entrypoints: web
+    traefik.http.routers.prometheus-podman-exporter-redirect.rule: Host(`prometheus-podman-exporter.day0.sololab`)
+    traefik.http.routers.prometheus-podman-exporter-redirect.middlewares: toHttps@file
+    traefik.http.routers.prometheus-podman-exporter-redirect.service: prometheus-podman-exporter
+
+    traefik.http.routers.prometheus-podman-exporter.entrypoints: webSecure
+    traefik.http.routers.prometheus-podman-exporter.rule: Host(`prometheus-podman-exporter.day0.sololab`)
+    traefik.http.routers.prometheus-podman-exporter.tls: true
+    traefik.http.routers.prometheus-podman-exporter.service: prometheus-podman-exporter
+
+    traefik.http.services.prometheus-podman-exporter.loadbalancer.server.port: 9882
   flags:
     web:
       listen-address: 127.0.0.1:9882
-  podLabels:
-    traefik.enable: true
-    traefik.http.routers.podman-exporter-redirect.entrypoints: web
-    traefik.http.routers.podman-exporter-redirect.rule: Host(`prometheus-podman-exporter.day0.sololab`)
-    traefik.http.routers.podman-exporter-redirect.middlewares: toHttps@file
-    traefik.http.routers.podman-exporter-redirect.service: podman-exporter
-
-    traefik.http.routers.podman-exporter.entrypoints: webSecure
-    traefik.http.routers.podman-exporter.rule: Host(`prometheus-podman-exporter.day0.sololab`)
-    traefik.http.routers.podman-exporter.tls: true
-    traefik.http.routers.podman-exporter.service: podman-exporter
-
-    traefik.http.services.podman-exporter.loadbalancer.server.port: 9882
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
