oci-ops/versioning: upgrade image/app binary version, deprecate some images

--- a/LocalWorkShop/Sync-OCIImage/Day0.deprecated.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day0.deprecated.jsonc
@@ -47,4 +47,25 @@
         "privateRepo": "instrumentisto/rsync-ssh:alpine3.21",
         "description": "https://quay.io/repository/instrumentisto/rsync-ssh?tab=tags",
     },
+    {
+        "publicRegistry": "ghcr.io",
+        "publicRepo": "zitadel/zitadel:v4.6.2",
+        "archive": "ghcr.io_zitadel_zitadel_v4.6.2.tar",
+        "privateRepo": "zitadel/zitadel:v4.6.2",
+        "description": "https://github.com/zitadel/zitadel/pkgs/container/zitadel/versions?filters%5Bversion_type%5D=tagged",
+    },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "leg100/otfd:0.4.1",
+        "archive": "docker.io_leg100_oftd_0.4.1.tar",
+        "privateRepo": "leg100/otfd:0.4.1",
+        "description": "https://hub.docker.com/r/leg100/otfd?tab=tags",
+    },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "drakkan/sftpgo:v2.6.6-plugins",
+        "archive": "docker.io_drakkan_sftpgo_v2.6.6-plugins.tar",
+        "privateRepo": "drakkan/sftpgo:v2.6.6-plugins",
+        "description": "https://hub.docker.com/r/drakkan/sftpgo/tags",
+    },
 ]
