--- a/TerraformWorkShop/Quadlet/vault/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/vault/attachments/values-sololab.yaml
@@ -6,8 +6,28 @@ global:
   imageRegistry: "zot.day0.sololab"
 
 vault:
-  containerPorts: []
-  resourcesPreset: "small"
+  podLabels:
+    # traefik.enable: true
+    # traefik.http.routers.vault-redirect.entrypoints: web
+    # traefik.http.routers.vault-redirect.rule: Host(`vault.day1.sololab`)
+    # traefik.http.routers.vault-redirect.middlewares: toHttps@file
+    # traefik.http.routers.vault-redirect.service: vault
+
+    # traefik.http.routers.vault.entrypoints: webSecure
+    # traefik.http.routers.vault.rule: Host(`vault.day1.sololab`)
+    # traefik.http.routers.vault.tls: true
+    # traefik.http.routers.vault.service: vault
+
+    # traefik.http.services.vault.loadBalancer.serversTransport: vault@file
+    # traefik.http.services.vault.loadbalancer.server.scheme: https
+    # traefik.http.services.vault.loadbalancer.server.port: 8200
+
+    # traefik.tcp.routers.vault-web.entrypoints: webSecure
+    # traefik.tcp.routers.vault-web.rule: HostSNI(`vault.day1.sololab`)
+    # traefik.tcp.routers.vault-web.tls.passthrough: true
+    # traefik.tcp.routers.vault-web.service: vault-web
+    # traefik.tcp.services.vault-web.loadbalancer.server.port: 8200
+
   ## @param vault.configFiles config file to start vault, the sub config block will convert to json and injected as ConfigMap
   ## You can add whatever sub items under this block
   ## ref: https://developer.hashicorp.com/vault/docs/configuration
@@ -38,31 +58,10 @@ vault:
             tls_disable_client_certs: true
       # https://developer.hashicorp.com/vault/docs/configuration/log-requests-level
       log_requests_level: info
+      # https://developer.hashicorp.com/vault/docs/configuration/telemetry#telemetry-parameters
       telemetry:
         disable_hostname: true
-        enable_host_metrics: true
-
-  podLabels:
-    # traefik.enable: true
-    # traefik.http.routers.vault-redirect.entrypoints: web
-    # traefik.http.routers.vault-redirect.rule: Host(`vault.day1.sololab`)
-    # traefik.http.routers.vault-redirect.middlewares: toHttps@file
-    # traefik.http.routers.vault-redirect.service: vault
-
-    # traefik.http.routers.vault.entrypoints: webSecure
-    # traefik.http.routers.vault.rule: Host(`vault.day1.sololab`)
-    # traefik.http.routers.vault.tls: true
-    # traefik.http.routers.vault.service: vault
-
-    # traefik.http.services.vault.loadBalancer.serversTransport: vault@file
-    # traefik.http.services.vault.loadbalancer.server.scheme: https
-    # traefik.http.services.vault.loadbalancer.server.port: 8200
-
-    # traefik.tcp.routers.vault-web.entrypoints: webSecure
-    # traefik.tcp.routers.vault-web.rule: HostSNI(`vault.day1.sololab`)
-    # traefik.tcp.routers.vault-web.tls.passthrough: true
-    # traefik.tcp.routers.vault-web.service: vault-web
-    # traefik.tcp.services.vault-web.loadbalancer.server.port: 8200
+        enable_hostname_label: true
 
   extraEnvVars:
     - name: TZ
@@ -93,4 +92,4 @@ volumePermissions:
   image:
     registry: zot.day0.sololab
     repository: hashicorp/vault
-    tag: 1.20.3
+    tag: 1.21.0
