oci-ops: update image version

--- a/LocalWorkShop/Sync-OCIImage/Day0.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day0.jsonc
@@ -15,48 +15,6 @@
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "giantswarm/zot:v2.1.10",
-        "archive": "quay.io_giantswarm_zot-v2.1.10.tar",
-        "privateRepo": "giantswarm/zot:v2.1.10",
-        "description": "https://quay.io/repository/giantswarm/zot?tab=tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "powerdns/pdns-auth-50:5.0.1",
-        "archive": "docker.io_powerdns_pdns-auth-50_5.0.1.tar",
-        "privateRepo": "powerdns/pdns-auth-50:5.0.1",
-        "description": "https://hub.docker.com/r/powerdns/pdns-auth-50",
-    },
-    {
-        "publicRegistry": "quay.io",
-        "publicRepo": "sclorg/postgresql-16-c10s:20250827",
-        "archive": "quay.io_sclorg_postgresql-16-c10s_20250827.tar",
-        "privateRepo": "sclorg/postgresql-16-c10s:20250827",
-        "description": "https://quay.io/repository/sclorg/postgresql-16-c10s?tab=tags",
-    },
-    {
-        "publicRegistry": "quay.io",
-        "publicRepo": "cockpit/ws:346",
-        "archive": "quay.io_cockpit_ws_346.tar",
-        "privateRepo": "cockpit/ws:346",
-        "description": "https://quay.io/repository/cockpit/ws?tab=tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "sigoden/dufs:v0.45.0",
-        "archive": "docker.io_sigoden_dufs_v0.45.0.tar",
-        "privateRepo": "sigoden/dufs:v0.45.0",
-        "description": "https://hub.docker.com/r/sigoden/dufs/tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "lldap/lldap:v0.6.2-alpine-rootless",
-        "archive": "docker.io_lldap_lldap_v0.6.2-alpine-rootless.tar",
-        "privateRepo": "lldap/lldap:v0.6.2-alpine-rootless",
-        "description": "https://hub.docker.com/r/lldap/lldap/tags",
-    },
-    {
-        "publicRegistry": "quay.io",
         "publicRepo": "coreos/etcd:v3.6.5",
         "archive": "quay.io_coreos_etcd_v3.6.5.tar",
         "privateRepo": "coreos/etcd:v3.6.5",
@@ -82,6 +40,55 @@
         "archive": "docker.io_traefik_whoami_v1.10.tar",
         "privateRepo": "traefik/whoami:v1.10",
         "description": "https://hub.docker.com/r/traefik/whoami/tags",
+    },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "lldap/lldap:v0.6.2-alpine-rootless",
+        "archive": "docker.io_lldap_lldap_v0.6.2-alpine-rootless.tar",
+        "privateRepo": "lldap/lldap:v0.6.2-alpine-rootless",
+        "description": "https://hub.docker.com/r/lldap/lldap/tags",
+    },
+    {
+        "publicRegistry": "quay.io",
+        "publicRepo": "giantswarm/zot:v2.1.10",
+        "archive": "quay.io_giantswarm_zot-v2.1.10.tar",
+        "privateRepo": "giantswarm/zot:v2.1.10",
+        "description": "https://quay.io/repository/giantswarm/zot?tab=tags",
+    },
+    {
+        "publicRegistry": "ghcr.io",
+        "publicRepo": "dexidp/dex:v2.44.0-alpine",
+        "archive": "ghcr.io_dexidp_dex_v2.44.0-alpine.tar",
+        "privateRepo": "dexidp/dex:v2.44.0-alpine",
+        "description": "https://github.com/dexidp/dex/pkgs/container/dex",
+    },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "wait4x/wait4x:3.6.0",
+        "archive": "docker.io_wait4x_wait4x_3.6.0.tar",
+        "privateRepo": "wait4x/wait4x:3.6.0",
+        "description": "https://hub.docker.com/r/wait4x/wait4x",
+    },
+    {
+        "publicRegistry": "quay.io",
+        "publicRepo": "minio/minio:RELEASE.2025-04-22T22-12-26Z",
+        "archive": "quay.io_minio_minio_RELEASE.2025-04-22T22-12-26Z.tar",
+        "privateRepo": "minio/minio:RELEASE.2025-04-22T22-12-26Z",
+        "description": "https://quay.io/repository/minio/minio?tab=tags",
+    },
+    {
+        "publicRegistry": "quay.io",
+        "publicRepo": "cockpit/ws:346",
+        "archive": "quay.io_cockpit_ws_346.tar",
+        "privateRepo": "cockpit/ws:346",
+        "description": "https://quay.io/repository/cockpit/ws?tab=tags",
+    },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "sigoden/dufs:v0.45.0",
+        "archive": "docker.io_sigoden_dufs_v0.45.0.tar",
+        "privateRepo": "sigoden/dufs:v0.45.0",
+        "description": "https://hub.docker.com/r/sigoden/dufs/tags",
     },
     {
         "publicRegistry": "quay.io",
