--- a/LocalWorkShop/Sync-OCIImage/Day1.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day1.jsonc
@@ -7,32 +7,11 @@
         "description": "https://hub.docker.com/r/hashicorp/vault/tags",
     },
     {
-        "publicRegistry": "ghcr.io",
-        "publicRepo": "dexidp/example-app:latest",
-        "archive": "ghcr.io_dexidp_example-app_latest.tar",
-        "privateRepo": "dexidp/example-app:latest",
-        "description": "https://github.com/dexidp/dex/pkgs/container/example-app",
-    },
-    {
         "publicRegistry": "docker.io",
         "publicRepo": "apteno/alpine-jq:2025-08-31",
         "archive": "docker.io_apteno_alpine-jq_2025-08-31.tar",
         "privateRepo": "apteno/alpine-jq:latest",
         "description": "https://hub.docker.com/r/apteno/alpine-jq/tags",
-    },
-    {
-        "publicRegistry": "quay.io",
-        "publicRepo": "minio/minio:RELEASE.2025-04-22T22-12-26Z",
-        "archive": "quay.io_minio_minio_RELEASE.2025-04-22T22-12-26Z.tar",
-        "privateRepo": "minio/minio:RELEASE.2025-04-22T22-12-26Z",
-        "description": "https://quay.io/repository/minio/minio?tab=tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "hashicorp/consul-template:0.41.3",
-        "archive": "docker.io_hashicorp_consul-template_0.41.3.tar",
-        "privateRepo": "hashicorp/consul-template:0.41.3",
-        "description": "https://hub.docker.com/r/hashicorp/consul-template",
     },
     {
         "publicRegistry": "docker.io",
@@ -43,9 +22,30 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "multani/nomad:1.10.4",
-        "archive": "docker.io_multani_nomad_1.10.4.tar",
-        "privateRepo": "multani/nomad:1.10.4",
+        "publicRepo": "library/traefik:v3.6.0",
+        "archive": "docker.io_library_traefik_v3.6.0.tar",
+        "privateRepo": "library/traefik:v3.6.0",
+        "description": "https://hub.docker.com/r/library/traefik/tags",
+    },
+    {
+        "publicRegistry": "ghcr.io",
+        "publicRepo": "dexidp/example-app:latest",
+        "archive": "ghcr.io_dexidp_example-app_latest.tar",
+        "privateRepo": "dexidp/example-app:latest",
+        "description": "https://github.com/dexidp/dex/pkgs/container/example-app",
+    },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "hashicorp/consul-template:0.41.3",
+        "archive": "docker.io_hashicorp_consul-template_0.41.3.tar",
+        "privateRepo": "hashicorp/consul-template:0.41.3",
+        "description": "https://hub.docker.com/r/hashicorp/consul-template",
+    },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "multani/nomad:1.11.0",
+        "archive": "docker.io_multani_nomad_1.11.0.tar",
+        "privateRepo": "multani/nomad:1.11.0",
         "description": "https://hub.docker.com/r/multani/nomad/tags",
     },
     {
@@ -53,6 +53,6 @@
         "publicRepo": "sig-storage/nfsplugin:v4.11.0",
         "archive": "registry.k8s.io_sig-storage_nfsplugin_v4.11.0.tar",
         "privateRepo": "sig-storage/nfsplugin:v4.11.0",
-        "description": "https://hub.docker.com/r/hectorm/nfs-ganesha/tags",
+        "description": "https://docker.aityp.com/r/registry.k8s.io/sig-storage/nfsplugin",
     },
 ]
