--- a/TerraformWorkShop/Quadlet/zot/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/zot/attachments/values-sololab.yaml
@@ -1,4 +1,27 @@
 zot:
+  podLabels:
+    traefik.enable: true
+    traefik.http.routers.zot-redirect.entrypoints: web
+    traefik.http.routers.zot-redirect.rule: Host(`zot.day0.sololab`)
+    traefik.http.routers.zot-redirect.middlewares: toHttps@file
+    traefik.http.routers.zot-redirect.service: zot
+
+    traefik.http.routers.zot.entrypoints: webSecure
+    traefik.http.routers.zot.rule: Host(`zot.day0.sololab`)
+    traefik.http.routers.zot.tls: true
+    traefik.http.routers.zot.service: zot
+
+    # traefik.http.services.zot.loadBalancer.serversTransport: zot@file
+    # traefik.http.services.zot.loadbalancer.server.scheme: https
+    traefik.http.services.zot.loadbalancer.server.port: 5000
+    traefik.http.services.zot.loadbalancer.healthCheck.path: /v2/
+
+    # traefik.tcp.routers.zot-web.entrypoints: webSecure
+    # traefik.tcp.routers.zot-web.rule: HostSNI(`zot.day0.sololab`)
+    # traefik.tcp.routers.zot-web.tls.passthrough: true
+    # traefik.tcp.routers.zot-web.service: zot-web
+    # traefik.tcp.services.zot-web.loadbalancer.server.port: 5000
+
   image:
     registry: zot.vyos.sololab
     repository: giantswarm/zot
@@ -44,11 +67,14 @@ zot:
       # https://zotregistry.dev/v2.1.10/admin-guide/admin-configuration/#authentication
       auth:
         ## user pass auth
-        ## https://zotregistry.dev/v2.1.10/articles/authn-authz/#htpasswd
+        ## ref: https://zotregistry.dev/v2.1.10/articles/authn-authz/#htpasswd
+        ##
         # htpasswd:
         #   path: /etc/zot/htpasswd
         # failDelay: 5
+        ## ldap auth
         ## https://zotregistry.dev/v2.1.10/articles/authn-authz/#ldap
+        ##
         ldap:
           credentialsFile: /etc/zot/secret/ldap-credentials.json
           address: lldap.day0.sololab
@@ -60,8 +86,9 @@ zot:
           userGroupAttribute: memberOf
           skipVerify: false
           subtreeSearch: true
+        ## odic auth
         ## https://zotregistry.dev/v2.1.10/articles/authn-authz/#using-dex
-        # config.http.auth.openid.providers.oidc.issuer
+        ##
         # openid:
         #   providers:
         #     oidc:
@@ -106,29 +133,6 @@ zot:
         ldap-credentials.json:
           bindDN: cn=readonly,ou=people,dc=root,dc=sololab
           bindPassword: readonly
-
-  podLabels:
-    traefik.enable: true
-    traefik.http.routers.zot-redirect.entrypoints: web
-    traefik.http.routers.zot-redirect.rule: Host(`zot.day0.sololab`)
-    traefik.http.routers.zot-redirect.middlewares: toHttps@file
-    traefik.http.routers.zot-redirect.service: zot
-
-    traefik.http.routers.zot.entrypoints: webSecure
-    traefik.http.routers.zot.rule: Host(`zot.day0.sololab`)
-    traefik.http.routers.zot.tls: true
-    traefik.http.routers.zot.service: zot
-
-    # traefik.http.services.zot.loadBalancer.serversTransport: zot@file
-    # traefik.http.services.zot.loadbalancer.server.scheme: https
-    traefik.http.services.zot.loadbalancer.server.port: 5000
-    traefik.http.services.zot.loadbalancer.healthCheck.path: /v2/
-
-    # traefik.tcp.routers.zot-web.entrypoints: webSecure
-    # traefik.tcp.routers.zot-web.rule: HostSNI(`zot.day0.sololab`)
-    # traefik.tcp.routers.zot-web.tls.passthrough: true
-    # traefik.tcp.routers.zot-web.service: zot-web
-    # traefik.tcp.services.zot-web.loadbalancer.server.port: 5000
 
   extraEnvVars:
     - name: TZ
