traefik-ops-day1: add wildcard server name in serversTransports, remove individual serversTransports config file, add consul root ca cert pki-ops: add wildcard domain in vault cert SAN field for traefik wildcard server name in serversTransports

--- a/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
@@ -80,10 +80,14 @@ traefik:
       serversTransports.yaml:
         http:
           serversTransports:
+            sololab-day1:
+              serverName: "*.day1.sololab"
+              rootcas:
+                - "/etc/traefik/tls/ca.crt"
             consul-service:
               serverName: "*.service.consul"
               rootcas:
-                - "/etc/traefik/tls/ca.crt"
+                - "/etc/traefik/tls/consul-root.crt"
 
   extraEnvVars:
     - name: TZ
