--- a/TerraformWorkShop/Hyper-V/VM-Day1-FCOS/Butane/packages.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day1-FCOS/Butane/packages.yaml
@@ -139,9 +139,9 @@ systemd:
         [Service]
         Type=oneshot
         RemainAfterExit=yes
-        ExecStart=/usr/bin/rpm-ostree rebase ${fcos_rebase_mirror}
+        ExecStartPre=/usr/bin/rpm-ostree rebase ${fcos_rebase_mirror}
         ExecStart=/bin/touch /var/lib/%N.stamp
-        ExecStart=/usr/bin/systemctl --no-block reboot
+        ExecStartPost=/usr/bin/systemctl --no-block reboot
         [Install]
         WantedBy=multi-user.target
 
@@ -166,9 +166,10 @@ systemd:
         # if the package is already installed. This is useful if the package is
         # added to the root image in a future Fedora CoreOS release as it will
         # prevent the service from failing.
-        ExecStartPre=/usr/bin/rpm-ostree install -y --allow-inactive $RPMS
+        ExecStartPre=/usr/bin/rpm-ostree install -y --idempotent --allow-inactive $RPMS
         ExecStart=/bin/touch /var/lib/%N.stamp
-        ExecStartPost=/bin/bash -c "systemctl disable coreos-container-signing-migration-motd.service && systemctl --no-block reboot"
+        ExecStartPost=/bin/bash -c "systemctl --no-block reboot"
+        # ExecStartPost=/bin/bash -c "systemctl disable coreos-container-signing-migration-motd.service && systemctl --no-block reboot"
 
         [Install]
         WantedBy=multi-user.target
