oci-ops: add grafana, loki, alloy, prometheus image to day1 sync config

--- a/LocalWorkShop/Sync-OCIImage/Day1.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day1.jsonc
@@ -55,4 +55,46 @@
         "privateRepo": "sig-storage/nfsplugin:v4.11.0",
         "description": "https://docker.aityp.com/r/registry.k8s.io/sig-storage/nfsplugin",
     },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "grafana/grafana:12.2.1",
+        "archive": "docker.io_grafana_grafana_12.2.1.tar",
+        "privateRepo": "grafana/grafana:12.2.1",
+        "description": "https://hub.docker.com/r/grafana/grafana/tags, https://quay.io/repository/giantswarm/grafana?tab=tags",
+    },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "grafana/loki:3.5.8",
+        "archive": "docker.io_grafana_loki_3.5.8.tar",
+        "privateRepo": "grafana/loki:3.5.8",
+        "description": "https://hub.docker.com/r/grafana/loki/tags, https://quay.io/repository/giantswarm/loki?tab=tags",
+    },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "grafana/alloy:v1.10.2",
+        "archive": "docker.io_grafana_alloy_v1.10.2.tar",
+        "privateRepo": "grafana/alloy:v1.10.2",
+        "description": "https://hub.docker.com/r/grafana/alloy/tags, https://quay.io/repository/giantswarm/alloy?tab=tags",
+    },
+    {
+        "publicRegistry": "quay.io",
+        "publicRepo": "prometheus/prometheus:v3.5.0",
+        "archive": "quay.io_prometheus_prometheus_v3.5.0.tar",
+        "privateRepo": "prometheus/prometheus:v3.5.0",
+        "description": "https://hub.docker.com/r/prom/prometheus/tags, https://quay.io/repository/prometheus/prometheus?tab=tags",
+    },
+    {
+        "publicRegistry": "quay.io",
+        "publicRepo": "prometheus/alertmanager:v0.28.1",
+        "archive": "quay.io_prometheus_alertmanager_v0.28.1.tar",
+        "privateRepo": "prometheus/alertmanager:v0.28.1",
+        "description": "https://hub.docker.com/r/prom/prometheus/tags, https://quay.io/repository/prometheus/prometheus?tab=tags",
+    },
+    {
+        "publicRegistry": "quay.io",
+        "publicRepo": "prometheus/blackbox-exporter:v0.27.0",
+        "archive": "quay.io_prometheus_blackbox-exporter_v0.27.0.tar",
+        "privateRepo": "prometheus/blackbox-exporter:v0.27.0",
+        "description": "https://quay.io/repository/prometheus/blackbox-exporter?tab=tags",
+    },
 ]
